dnl Process this file with autoconf to produce a configure script.

AC_INIT([lfp2pgsql], [0.9.0])
AM_INIT_AUTOMAKE([1.10 no-define])
AC_CONFIG_SRCDIR([src/lfp2pgsql.cpp])
AM_CONFIG_HEADER([config.h])

m4_ifndef([AM_SILENT_RULES], [m4_define([AM_SILENT_RULES],[])])
AM_SILENT_RULES([yes])

AC_PROG_CXX

AC_CONFIG_FILES(
    Makefile
    src/Makefile
)

AC_OUTPUT